--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -14,19 +14,19 @@ body, div, span, header, footer, nav, section, aside, article, ul, dl, dt, dd, l
 ::-webkit-scrollbar {
   width: 0px;
   height: 0px;
-  background-color: #F5F5F5;
+  background-color: $c131313;
 }
 /*定义滚动条轨道 内阴影+圆角*/
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0);
   border-radius: 10px;
-  background-color: #F5F5F5;
+  background-color: $c131313;
 }
 /*定义滑块 内阴影+圆角*/
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #555;
+  background-color: $c1c1c1c;
 }
 ::-webkit-input-placeholder {
   color: #999999;
@@ -43,7 +43,7 @@ textarea {
 html,body{
   height: 100%;
   width: 100%;
-  background-color: #f2f2f2;
+  background-color: $c131313;
   max-width: 640px;
   margin: 0 auto;
 }
