订单,用户中心换肤

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -176,6 +176,9 @@ input[type="text"], input[type="number"], input[type="password"] {
 .text-default {
   color: #333333;
 }
+.text-dark {
+  color: #cccccc;
+}
 .text-primary {
   color: #e73f40;
 }
