--- a/src/style/icon.css
+++ b/src/style/icon.css
@@ -35,7 +35,7 @@
 }
 .red-check-icon {
   width: 12px; height: 9px;
-  background: url("../assets/icon/red_check.png") no-repeat;
+  background: url("../assets/icon/gold_check.png") no-repeat;
   background-size: 100% 100%;
 }
 .scheme-line-icon {
