--- a/src/style/public.scss
+++ b/src/style/public.scss
@@ -3,3 +3,7 @@ $cffC63A: #FFC63A;
 $c131313: #131313;
 $c1c1c1c: #1c1c1c;
 $c999999: #999999;
+$c313131: #313131;
+$cCccCCc: #cccccc;
+$c494949: #494949;
+$c3f3f3f: #3f3f3f;
