--- a/src/style/LOTTERY_HM.global.scss
+++ b/src/style/LOTTERY_HM.global.scss
@@ -1,6 +1,7 @@
 $lottery365: false;
 $lotteryTf: false;
 $lotteryHm: true;
+$lotteryIg: false;
 
 $cFFfFFF: #ffffff;
 $cffC63A: #FFC63A;
@@ -11,6 +12,8 @@ $c313131: #313131;
 $cCccCCc: #cccccc;
 $c494949: #494949;
 $c3f3f3f: #3f3f3f;
+$cgray: #131313;
+$cEbebeb: #EBEBEB;
 @if ($lottery365) {}
 @else if($lottery365){}
 @else {}
