--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -236,7 +236,7 @@ input[type="text"], input[type="number"], input[type="password"] {
 }
 
 .text-primary {
-  color: #FF3333;
+  color: $cffC63A;
 }
 
 .text-primary-2 {
