--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -568,10 +568,10 @@ input[type="text"], input[type="number"], input[type="password"] {
   flex: 0 0 90%;
   max-width: 90%;
 }
-
-button.mint-msgbox-confirm {
-  color: #e73f40;
-}
+//
+//button.mint-msgbox-confirm {
+//  color: #e73f40;
+//}
 
 /*弹窗默认覆盖*/
 .v-hidden {
